src/test/ui/associated-type-bounds/ambiguous-associated-type2.stderr
error[E0391]: cycle detected when computing the super traits of `Baz` with associated type name `Item`
  --> $DIR/ambiguous-associated-type2.rs:9:1
   |
LL | trait Baz: Foo + Bar<Self::Item> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which again requires computing the super traits of `Baz` with associated type name `Item`, completing the cycle
note: cycle used when computing the super traits of `Baz`
  --> $DIR/ambiguous-associated-type2.rs:9:1
   |
LL | trait Baz: Foo + Bar<Self::Item> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
