src/test/ui/associated-type-bounds/ambiguous-associated-type2.rs
// ignore-tidy-linelength

trait Foo {
    type Item;
}
trait Bar<T> {
    type Item;
}
trait Baz: Foo + Bar<Self::Item> {}
//~^ ERROR cycle detected when computing the super traits of `Baz` with associated type name `Item` [E0391]

fn main() {}
